[project]
name = "worth"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "scipy",
    "yfinance",
    "django<5.2",
    "psycopg2-binary",
    "pycodestyle",
    "pytz",
    "sqlparse",
    "requests",
    "cachetools",
    "ib-insync",
    "python-gnupg",
    "bootstrap4",
    "crispy-bootstrap4",
    "django-crispy-forms",
    "tbgutils",
    "moneycounter",
    "django-easy-audit>=1.3.7",
    "plotly",
    "ruff",
]

[tool.setuptools]
packages = ["worth", "trades", "markets", "accounts", "analytics"]
include-package-data = true
