[project]
name = "worth"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "scipy",
    "yfinance",
    "django>=5.2,<5.3",
    "psycopg2-binary",
    "pytz",
    "sqlparse",
    "requests",
    "cachetools",
    "ib-insync",
    "python-gnupg",
    "bootstrap4",
    "crispy-bootstrap4",
    "django-crispy-forms",
    "tbgutils",
    "moneycounter",
    "django-easy-audit>=1.3.7",
    "plotly",
    "black",
    "pandas-stubs~=3.0.0",
    "ruff",
]

[tool.setuptools]
packages = ["worth", "trades", "markets", "accounts", "analytics"]
include-package-data = true

[tool.black]
line-length = 99
target-version = ["py311"]
exclude = """
(
  migrations
  | node_modules
  | static
  | \\.tox
  | \\.git
)
"""

[tool.ruff]
line-length = 99
target-version = "py311"
extend-exclude = [
  "migrations",
  "node_modules",
  "static",
  ".tox",
  ".git",
]

[tool.ruff.lint]
# Keep project-preferred ignores that Ruff implements.
ignore = ["E402", "E712", "E741"]
